services/devops/ingress/backend-ingress.yml
# backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: fastcontract-dev
spec:
  ingressClassName: "traefik"
  rules:
    - host: backend.davidchalan.es
      http:
        paths:
          - path: /api/v1
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 31001
