services/devops/ingress/frontend-ingress.yml
# frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: fastcontract-dev
spec:
  ingressClassName: "traefik"
  rules:
    - host: fastcontract.davidchalan.es
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 3000
